fix hidden popover contrast

--- a/apps/dashboard/app/assets/stylesheets/custom.scss
+++ b/apps/dashboard/app/assets/stylesheets/custom.scss
@@ -6,6 +6,7 @@
 
 .sr-only.focusable, .sr-only.focusable * {
     position: initial;
+    color: black;
 }
 
 .card {
